<resources>
    <string name="app_name">Prime</string>
    <string name="search_hot">热门搜索</string>
    <string name="search_hint">请输入关键字搜索</string>
    <string name="search_cancel">取消</string>
    <string name="view_one">View One</string>
    <string name="view_two">In the transitions framework, animations create a series of frames that depict a change between the view hierarchies in the starting and ending scenes. The framework represents these animations as transition objects, which contain information about an animation. To run an animation, you provide the transition to use and the ending scene to a transition manager.</string>
    <string name="menu_title_two">show two</string>
    <string name="menu_title_one">show one</string>
    <string name="view_three">View Three</string>
    <string name="china">china</string>
    <string name="usa">usa</string>
    <string name="japan">japan</string>
    <string name="menu_china">中国，是以华夏文明为源泉、中华文化为基础，并以汉族为主体民族的多民族国家，通用汉语、汉字，汉族与少数民族被统称为“中华民族”，又自称为炎黄子孙、龙的传人。 中国是世界四大文明古国之一，有着悠久的历史，距今约5000年前，以中原地区为中心开始出现聚落组织进而形成国家，后历经多次民族交融和朝代更迭，直至形成多民族国家的大一统局面。20世纪初辛亥革命后，君主政体退出历史舞台，共和政体建立。1949年中华人民共和国成立后，在中国大陆建立了人民代表大会制度的政体。 中国疆域辽阔、民族众多，先秦时期的华夏族在中原地区繁衍生息，到了汉代通过文化交融使汉族正式成型，奠定了中国主体民族的基础。后又通过与周边民族的交融，逐步形成统一多民族国家的局面，而人口也不断攀升，宋代中国人口突破一亿，清朝时期人口突破四亿，到2005年中国人口已突破十三亿。 中国文化渊远流长、博大精深、绚烂多彩，是东亚文化圈的文化宗主国，在世界文化体系内占有重要地位，由于各地的地理位置、自然条件的差异，人文、经济方面也各有特点。传统文化艺术形式有诗词、戏曲、书法、国画等，而春节、元宵、清明、端午、中秋、重阳等则是中国重要的传统节日。</string>
    <string name="menu_usa">美利坚合众国（英语：United States of America），简称“美国”，是由华盛顿哥伦比亚特区、50个州和关岛等众多海外领土组成的联邦共和立宪制国家。其主体部分位于北美洲中部，美国中央情报局《世界概况》1989年至1996年初始版美国总面积是9,372,610平方公里，1997年修正为963万平方公里（加上五大湖中美国主权部分和河口、港湾、内海等沿海水域面积），人口3.2亿，通用英语，是一个移民国家[1]  。 北美原为印第安人的聚居地，15世纪末，西班牙、荷兰、英国等国开始向北美移民。1775年，爆发了北美人民反抗英国殖民者的独立战争。1776年7月4日，在费城召开了第二次大陆会议，由乔治·华盛顿任大陆军总司令，通过《独立宣言》，美利坚合众国正式成立。 1861年到1865年，爆发了南北战争。亚伯拉罕·林肯领导北方的自由州战胜了南方的蓄奴州。美国从此结束了“一国两制”，开始全面实行自由资本主义，走上了快速发展的道路。 美国是一个高度发达的资本主义国家，在两次世界大战中，美国和其他盟国取得胜利，经历数十年的冷战，在苏联解体后，成为目前唯一的超级大国，在经济、文化、工业等领域都处于全世界的领先地位。</string>
    <string name="menu_japan">日本国（日语：にっぽんこく、にほんこく），简称日本，位于东亚、国名意为“日出之国”，领土由北海道、本州、四国、九州四个大岛及7200多个小岛组成，总面积37.8万平方千米。主体民族为大和族，通用日语，总人口约1.26亿。 3世纪中叶，其境内出现较大的国家“大和国”。645年，日本向中国唐朝学习，进行大化改新。12世纪后期，天皇皇权旁落，进入幕府统治时代。 19世纪50年代中期，欧美列强侵入迫使日本放弃“锁国政策”，签订一系列不平等条约，日本人民展开了反对侵略、反对幕府统治的斗争。1868年，明治天皇重新掌权，鼓励向欧美列强学习，进行明治维新，迅速跻身资本主义列强行列，对外逐步走上侵略扩张的军国主义道路，曾多次侵略中国、朝鲜等亚洲国家。二战日本投降后，颁布新宪法，由天皇制国家变为以天皇为国家象征的议会内阁制国家。目前是仅次于美国、中国的世界第三大经济体。由于社会人口老龄化严重，人工智能被应用于养老与工业。日本计划在2050年仿真机器人产业问鼎全球第一。[1]  日本是一个高度发达的资本主义国家。其资源匮乏并极端依赖进口，发达的制造业是国民经济的主要支柱。科研、航天、制造业、教育水平均居世界前列。此外，以动漫、游戏产业为首的文化产业和发达的旅游业也是其重要象征。日本在环境保护、资源利用等许多方面堪称世界典范，其国民普遍拥有良好的教育、极高的生活水平和国民素质。至今仍较好地保存着以茶道、花道、书道等为代表的日本传统文化。</string>
    <string name="download">下载</string>
    <string name="down_success">下载成功</string>
    <string name="down_err_file">文件损坏</string>

    <string name="header_hint_refresh_normal">Pull to refresh</string>
    <string name="header_hint_refresh_ready">Release to refresh</string>
    <string name="header_hint_refresh_loading">Refreshing&#8230;</string>
    <string name="header_hint_refresh_time">Time：</string>
    <string name="footer_hint_load_normal">Load more</string>
    <string name="footer_hint_load_ready">Release to load more</string>

    <string-array name="fruits">
        <item>apple</item>
        <item>banana</item>
        <item>juice</item>
    </string-array>
</resources>
