<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/root"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_record_sel"
        android:clickable="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/china"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_usa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_record_sel"
        android:clickable="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/usa"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_record_sel"
        android:clickable="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/japan"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>