<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/logo_color">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/search_bg"
            android:drawableLeft="@drawable/icon_search"
            android:drawablePadding="6dp"
            android:hint="@string/search_hint"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:textColor="@color/tab_txt_color"
            android:singleLine="true"
            android:imeOptions="actionSearch"
            android:textColorHint="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/search_cancel"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="13dp"
            android:textColor="@color/search_hot"
            android:text="@string/search_hot"
            android:textSize="16sp" />

        <FrameLayout
            android:id="@+id/tab_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleview"
            android:scrollbars="none"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</LinearLayout>